--- a/public/game.html
+++ b/public/game.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./src/javascript.svg" type="image/x-icon">
-  <link rel="stylesheet" href="../src/style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>Hangman</title>
   <script>
     if (!localStorage.getItem("session")) {
@@ -54,5 +54,6 @@
   </main>
   <script type="module" src="./src/game.js"></script>
 </body>
+
 
 </html>
